--- a/README
+++ b/README
@@ -10,5 +10,5 @@ you CAN download anything you find here, but be aware of the following:
 (Support might be given to a closed user group, though. if we decide you should
 participate in the beta testing phase, you will be contacted by us.)
 
-cheers
+cheers,
 azido
